➕ Added Dataview line-wrapping fix
Credits to @miharekar for catching this! Thank you so much 🙏

Fixes #71

--- a/obsidian.css
+++ b/obsidian.css
@@ -5735,6 +5735,11 @@ body.plugin-sliding-panes-stacking .workspace > .mod-root > .workspace-leaf {
                 Dataview
 ────────────────────────────────────*/
 /* Dataview Tables */
+table.dataview {
+  word-break: normal;
+  overflow-wrap: normal;
+}
+
 .markdown-source-view.mod-cm6 .dataview {
   /* Source View */
 }
