--- a/scss/80_plugins-community/_dataview.scss
+++ b/scss/80_plugins-community/_dataview.scss
@@ -2,6 +2,11 @@
                 Dataview
 ────────────────────────────────────*/
 /* Dataview Tables */
+table.dataview {
+    word-break: normal;
+    overflow-wrap: normal;
+}
+
 .dataview {
     .markdown-source-view.mod-cm6 & {
     /* Source View */
